feat: Sistema completo de releases v1.0
✨ Añadido sistema automatizado de releases con GitHub Actions

📦 Nuevos archivos:
- .github/workflows/release.yml - Workflow automático de releases
- .github/RELEASE_GUIDE.md - Guía completa de gestión de releases
- CHANGELOG.md - Historial de cambios (v1.0.0)
- QUICKSTART_RELEASE.md - Guía rápida para primera release
- scripts/create-release-package.sh - Script para releases locales
- scripts/README.md - Documentación de scripts

📝 Modificaciones:
- README.md - Añadida sección de descargas con badges
- .gitignore - Excluir archivos de release generados

🎯 Características:
- Generación automática de paquetes ZIP y TAR.GZ
- Checksums SHA256 para verificación de integridad
- Release notes automáticas
- Soporte para releases manuales y automáticas
- Documentación completa en español
- Scripts con output coloreado y user-friendly

🚀 Uso:
- GitHub Actions: Run workflow 'Create Release Package'
- Local: ./scripts/create-release-package.sh 1.0.0

📚 Docs: Ver QUICKSTART_RELEASE.md para comenzar

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,11 @@ ENV/
 # Backup files
 *.bak
 *.backup
+
+# Release packages (generated locally)
+agentcamp-madrid-2026-v*.zip
+agentcamp-madrid-2026-v*.tar.gz
+agentcamp-madrid-2026-v*.sha256
+release-temp/
+*.zip.sha256
+*.tar.gz.sha256
