fix: corregir ubicación y fecha del evento principal
- Cambiar Teatro Goya Multiespacio por Universidad CEU San Pablo
- Corregir dirección: Av. de Montepríncipe, s/n, 28668 Boadilla del Monte
- Corregir fecha: 28 de febrero de 2026 (no 1 de marzo)
- Actualizar todos los documentos y plantillas para speakers
- Garantizar consistencia con la información oficial de globalai.es

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,7 @@ jobs:
           
           📍 Ubicación:
           - Workshops (27 Feb): NTT DATA Spain, Madrid
-          - Conferencia (1 Mar): Teatro Goya Multiespacio, Madrid
+          - Conferencia (28 Feb): Universidad CEU San Pablo, Boadilla del Monte, Madrid
           
           Para más información, visita el README.md incluido en este paquete.
           EOF
@@ -134,8 +134,8 @@ jobs:
             - 📍 NTT DATA Spain, Madrid
             - ⏰ Mañana (10:00-14:00) y Tarde (15:00-19:00)
           
-          - **Conferencia**: Sábado 1 de Marzo de 2026
-            - 📍 Teatro Goya Multiespacio, Madrid
+          - **Conferencia**: Sábado 28 de Febrero de 2026
+            - 📍 Universidad CEU San Pablo, Boadilla del Monte, Madrid
             - ⏰ 08:30 - 19:00
           
           ## 🔗 Enlaces Útiles
